--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Please Loginasdasdasdasd</h1>
+        <h1>Please Login</h1>
         <form>
             <div class="form-control">
                 <input type="text" required>
