--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form Input Wave</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
@@ -13,13 +14,13 @@
             <div class="form-control">
                 <input type="text" required>
                 <label > Email</label>
-                <label>
+                <!-- <label>
                     <span style="transition-delay: 0ms;">E</span>
                     <span style="transition-delay: 50ms;">m</span>
                     <span style="transition-delay: 100ms;">a</span>
                     <span style="transition-delay: 150ms;">i</span>
                     <span style="transition-delay: 200ms;">l</span>
-                </label>
+                </label> -->
             </div>
 
     <div class="form-control">
