--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <div class="form-control">
         <input type="text" required>
-        <label > Email</label>
+        <label >Password</label>
            </div>
            <button class="btn">Login</button>
            <p class="text">Dont have an account? <a href="#"> Register</a></p>
