--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sound Board</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <audio src=""></audio>
+    <audio id= "announcement"src="sounds/announcement-sound-4-21464.mp3"></audio>
+    <audio id= "bass-dropmp"src="sounds/bass-dropmp3-14596.mp3"></audio>
+    <audio id= "crowded light"src="sounds/crowded light.wav"></audio>
+    <audio id= "logo"src="sounds/logo-108962.mp3"></audio>
+    <audio id= "clean-logo"src="sounds/simple-clean-logo-13775"></audio>
 
 
-    <div id=" " ></div>
+    <div id="buttons" ></div>
     <script src="script.js"></script>
 </body>
 </html>
