--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
 
     <div class="form-control">
-        <input type="text" required>
+        <input type="password" required>
         <label >Password</label>
            </div>
            <button class="btn">Login</button>
